skeplib/tests/fixtures/resolver/valid/simple_graph/main.sk
import a;

fn main() -> Int {
  return a.f();
}
