skeplib/tests/fixtures/resolver/invalid/cycle_three/main.sk
import a;

fn main() -> Int {
  return 0;
}
